Make broken check scripts show up in an ugly way

--- a/public/index.html
+++ b/public/index.html
@@ -37,6 +37,18 @@
         font-size: 85px;
         line-height: 85px;
       }
+      #checks .check.broken {
+        background: repeating-linear-gradient(
+          45deg,
+          #ddb024,
+          #ddb024 10px,
+          #dd5c24 10px,
+          #dd5c24 20px
+        );
+        color: #fff;
+        font-size: 85px;
+        line-height: 85px;
+      }
     </style>
   </head>
 
